# robot_control_ws

./: .gitignore  README.md  test_dobot.py
dobot_venv/: pyvenv.cfg
ros2env/: pyvenv.cfg
src/dobot_backend/: package.xml  setup.cfg  setup.py
src/dobot_backend/dobot_backend/: motion_planner.py  state_manager.py
src/dobot_backend/launch/: backend.launch.py
src/dobot_frontend/: package.xml  setup.cfg  setup.py
src/dobot_frontend/dobot_frontend/: qt_interface.py  web_server.py
src/dobot_frontend/launch/: web_interface.launch.py
src/dobot_frontend/templates/: index.html
src/dobot_hardware_ros2/: CMakeLists.txt  package.xml  plugin.xml
src/dobot_hardware_ros2/config/: controllers.yaml  ros2_controllers.yaml
src/dobot_hardware_ros2/include/dobot_hardware/: dobot_hardware_interface.hpp
src/dobot_hardware_ros2/launch/: control_with_wrapper.launch.py  ros2_control.launch.py
src/dobot_hardware_ros2/src/: dobot_hardware_interface.cpp
src/dobot_moveit_config/: .setup_assistant  package.xml
src/dobot_moveit_config/config/: dobot.ros2_control.xacro  dobot.srdf  dobot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
src/dobot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  ros2_control.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/robot_application/: app_node.py  command_parser.py  package.xml  ros_api.py  setup.py  state_manager.py
src/robot_bridge/: package.xml  setup.py
src/robot_bridge/robot_bridge/: DobotDllType.py  bridge_node.py  joint_state_bridge.py  trajectory_bridge.py
src/robot_controller/: package.xml  setup.py
src/robot_controller/robot_controller/: controller_node.py  dobot_joint_state_publisher.py  moveit_to_dobot.py
src/robot_description/urdf/: dobot.urdf.xacro
