<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dobot_backend</name>
  <version>1.0.0</version>
  <description>Dobot Magician backend motion planning and control (ROS 2 Jazzy)</description>

  <maintainer email="anaghapathirappilly2005@gmail.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core ROS 2 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>

  <!-- MoveIt 2 -->
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>