<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>dobot_frontend</name>
  <version>1.0.0</version>
  <description>
    Frontend user interfaces for Dobot Magician, including web and GUI-based control
    (ROS 2 Jazzy compatible)
  </description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core ROS 2 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>

  <!-- Note:
       Flask, Flask-CORS, and Flask-SocketIO are Python (pip) dependencies.
       They are intentionally NOT listed here because package.xml
       tracks ROS dependencies only.
  -->

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
