<?xml version="1.0"?>
<package format="3">
  <name>dobot_hardware_ros2</name>

  <version>0.0.1</version>
  <description>ros2_control hardware interface for Dobot Magician</description>

  <maintainer email="anagha@todo.todo">anagha</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>controller_manager</depend>
  <depend>ros2_control</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="${prefix}/plugin.xml"/>
  </export>

</package>
